--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="avatar text-center mb-4">
-        <img src="/images/avatar.jpg" alt="Avatar" class="rounded-circle">
+        <img src="images/avatar.jpg" alt="Avatar" class="rounded-circle">
     </div>
     <div class="text">
     <h1>AtvintaMLBB</h1>
