--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="avatar text-center mb-4">
         <img src="images/avatar.jpg" alt="Avatar" class="rounded-circle">
     </div>
-    <div class="text">
+    <div class="description">
     <h1>AtvintaMLBB</h1>
     </div>
     <div class="container text-center mt-5 d-flex flex-column align-items-center gap-4">
