--- a/operation.html
+++ b/operation.html
@@ -29,8 +29,10 @@
                 <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
                         Alfa-Bank
-                     4585220003078788
-                     Petrovich Petrenko
+                    <div class="select-number">
+                     4585220003078788</div>
+                    <div class="select-name">
+                     Petrovich Petrenko</div>
                     </div>
                 </div>
             </div>
@@ -40,5 +42,6 @@
         </a>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script srs="js/script.js"></script>
 </body>
 </html>
