--- a/operation.html
+++ b/operation.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AtvintaMLBB</title>
+    <title>AtvintaMlBB</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
@@ -28,11 +28,19 @@
                 </h2>
                 <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                        Alfa-Bank
+                         Alfa-Bank
                     <div class="select-number">
                      4585220003078788</div>
                     <div class="select-name">
                      Petrovich Petrenko</div>
+                     <h1></h1>
+                         Sberbank
+                    <div class="select-number2">
+                    2202208345465745</div>
+                    <h1></h1>
+                      По номеру телефона
+                    <div class="select-number3">
+                    +79031242381</div>
                     </div>
                 </div>
             </div>
@@ -42,6 +50,6 @@
         </a>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script srs="js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
