--- a/operation.html
+++ b/operation.html
@@ -45,9 +45,11 @@
                 </div>
             </div>
         </div>
+        <div class="btn-container">
         <a href="https://www.donationalerts.com/r/228atvintamlbb" class="btn btn-donation">
             <i class="bi bi-coin"></i> DonationAlerts
         </a>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/script.js"></script>
