--- a/operation.html
+++ b/operation.html
@@ -42,6 +42,10 @@
                     <div class="select-number3">
                     +79031242381</div>
                     </div>
+                    <h1></h1>
+                    <div class="help">
+                        При нажатии на реквизиты они автоматически скопируются в буфер обмена.
+                    </div>
                 </div>
             </div>
         </div>
