--- a/operation.html
+++ b/operation.html
@@ -17,6 +17,9 @@
         <p>
             Как студенту, которому важно завершить обучение, мне сложно справляться с этими проблемами в одиночку. Единственный профессор в Беларуси согласился провести операцию, и я стараюсь собрать необходимую сумму со стримов. Любая поддержка будет для меня бесценной. Огромное спасибо всем, кто откликнется!
         </p>
+        <div class="help">
+            При нажатии на номер банковской карты в реквизитах они автоматически скопируются в буфер обмена.
+        </div>
     </div>
     <div class="footer">
         <div class="accordion" id="accordionExample">
@@ -41,10 +44,6 @@
                       По номеру телефона
                     <div class="select-number3">
                     +79031242381</div>
-                    </div>
-                    <h1></h1>
-                    <div class="help">
-                        При нажатии на реквизиты они автоматически скопируются в буфер обмена.
                     </div>
             </div>
         </div>
