--- a/operation.html
+++ b/operation.html
@@ -36,6 +36,10 @@
                      4585220003078788</div>
                     <div class="select-name">
                      Petrovich Petrenko</div>
+                        <h1></h1>
+                        <div class="ru">
+                            По России
+                        </div>
                      <h1></h1>
                          Sberbank
                     <div class="select-number2">
