--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="icon" href="images/avatar.jpg">
 </head>
 <body>
+   <div class="snowflakes">
+        <div class="snowflake">❄</div>
+    </div>
     <div class="avatar text-center mb-4">
         <img src="images/avatar.jpg" alt="Avatar" class="rounded-circle">
     </div>
@@ -53,5 +56,6 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/skript.js"></script>
 </body>
 </html>
