--- a/operation.html
+++ b/operation.html
@@ -10,6 +10,9 @@
     <link rel="icon" href="images/avatar.jpg">
 </head>
 <body>
+   <div class="snowflakes">
+        <div class="snowflake">❄</div>
+    </div>
     <div class="container-box">
         <p>
             Недавно мне исполнилось 18 лет, и около полугода назад у меня обострились проблемы со щитовидной железой: появились уплотнения и гормональные сбои. Два месяца назад начались боли, которые иногда настолько сильные, что я не могу даже вести стримы. Помимо этого, у меня диагностирована анорексия и сердечная недостаточность, и есть вероятность, что щитовидная железа также влияет на состояние сердца, так как боли в области груди усилились.
