--- a/index.html
+++ b/index.html
@@ -56,6 +56,6 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/skript.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
