--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <img src="images/avatar.jpg" alt="Avatar" class="rounded-circle">
     </div>
     <div class="description">
-    <h1>𓂺AtvintaMLBB𓂺</h1>
+    <h1>AtvintaMLBB</h1>
     </div>
     <div class="container text-center mt-5 d-flex flex-column align-items-center gap-4">
         <div class="btn-container">
